   cel_pgsql.conf.

CDR Backends
------------------

cdr_adaptive_odbc
------------------
 * Added the ability to set the character to quote identifiers. This
   allows adding the character at the start and end of table and column
   names. This setting is configurable for cdr_adaptive_odbc via the
   quoted_identifiers in configuration file cdr_adaptive_odbc.conf.


------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.6.0 to Asterisk 13.7.0 ------------
------------------------------------------------------------------------------

Dialplan Functions
------------------
 * The HOLD_INTERCEPT dialplan function now actually exists in the source tree.
   While support for the events was added in Asterisk 13.4.0, the function
   accidentally never made it in. That function is now present, and will cause
   the 'hold' raised by a channel to be intercepted and converted into an
   event instead.


------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.5.0 to Asterisk 13.6.0 ------------
------------------------------------------------------------------------------

Dialplan Functions
------------------
 * The CHANNEL function, when used on a PJSIP channel, now exposes a 'call-id'
   extraction option when using with the 'pjsip' signalling option. It will
   return the SIP Call-ID associated with the INVITE request that established
   the PJSIP channel.

ARI
------------------
 * Two new endpoint related events are now available: PeerStatusChange and
   ContactStatusChange. In particular, these events are useful when subscribing
   to all event sources, as they provide additional endpoint related
   information beyond the addition/removal of channels from an endpoint.

 * Added the ability to subscribe to all ARI events in Asterisk, regardless
   of whether the application 'controls' the resource. This is useful for